Add advanced control paramters in create and restore cmd
