# docs/swagger.json
@@ -495,6 +495,10 @@
                     "description": "force backup skip flush, Should make sure data has been stored into disk when using it",
                     "type": "boolean"
                 },
+                "meta_only": {
+                    "description": "only backup meta, including collection schema and index info",
+                    "type": "boolean"
+                },
                 "requestId": {
                     "description": "uuid of request, will generate one if not set",
                     "type": "string"
@@ -514,6 +518,8 @@
                 11,
                 20,
                 21,
+                22,
+                23,
                 100,
                 101
             ],
@@ -528,6 +534,8 @@
                 "DataType_Double",
                 "DataType_String",
                 "DataType_VarChar",
+                "DataType_Array",
+                "DataType_Json",
                 "DataType_BinaryVector",
                 "DataType_FloatVector"
             ]
@@ -774,6 +782,14 @@
                     "description": "database and collections to restore. A json string. To support database. 2023.7.7",
                     "type": "string"
                 },
+                "dropExistCollection": {
+                    "description": "if true drop the collections",
+                    "type": "boolean"
+                },
+                "dropExistIndex": {
+                    "description": "if true drop index info",
+                    "type": "boolean"
+                },
                 "metaOnly": {
                     "description": "if true only restore meta",
                     "type": "boolean"
@@ -788,6 +804,14 @@
                 },
                 "restoreIndex": {
                     "description": "if true restore index info",
+                    "type": "boolean"
+                },
+                "skipCreateCollection": {
+                    "description": "if true will skip create collections",
+                    "type": "boolean"
+                },
+                "useAutoIndex": {
+                    "description": "if true use autoindex when restore vector index",
                     "type": "boolean"
                 }
             }
@@ -862,6 +886,14 @@
                 "coll_backup": {
                     "$ref": "#/definitions/backuppb.CollectionBackupInfo"
                 },
+                "dropExistCollection": {
+                    "description": "if true drop the collections",
+                    "type": "boolean"
+                },
+                "dropExistIndex": {
+                    "description": "if true drop index info",
+                    "type": "boolean"
+                },
                 "end_time": {
                     "type": "integer"
                 },
@@ -891,6 +923,10 @@
                 "restored_size": {
                     "type": "integer"
                 },
+                "skipCreateCollection": {
+                    "description": "if true will skip create collections",
+                    "type": "boolean"
+                },
                 "start_time": {
                     "type": "integer"
                 },
@@ -905,6 +941,10 @@
                 },
                 "to_restore_size": {
                     "type": "integer"
+                },
+                "useAutoIndex": {
+                    "description": "if true use autoindex when restore vector index",
+                    "type": "boolean"
                 }
             }
         },
